[package]
authors = ["Kevin Cox <kevincox@kevincox.ca>"]
name = "rustymedia"
version = "0.1.0"
edition = "2018"
[dependencies]
bytes = "0.4"
docopt = "1.0"
env_logger = "0.4"
error-chain = "0.11"
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.11"
lazy_static = "1.0.0"
lru-cache = "=0.1.1"
nix = "0.9"
os_pipe = "0.6"
percent-encoding = "1.0"
pnet = "0.22.0"
regex = "0.2"
serde = "1.0"
serde-xml-rs = "0.2"
serde_derive = "1.0"
serde_json = "1.0"
smallvec = "0.6.10"
tokio-core = "0.1"
tokio-file-unix = "0.4"
tokio-io = "0.1"
serde_urlencoded_field = "0.1.0"
[patch.crates-io]
lru-cache = { git = "https://github.com/kevincox/lru-cache.git", branch = "entry-api" }
[profile.release]
debug = true
